# Mosquitobrain

./: CMakeLists.txt  README.md  status.json
.ideas/: architecture.md  creative-brief.md  parameter-spec.md  plan.md
Design/: v1-style-guide.md  v1-ui-spec.md
Documentation/: USER_MANUAL.md
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  VisageControls.h
_state_backups/: status_backup_20260403_102410.json  status_backup_20260403_102717.json  status_backup_20260403_103414.json
